fix: Response Type, Network Script (#9)
* fix: Response Type, Network Script

* fix: lint
