# controllers/user/update.go
@@ -36,9 +36,9 @@ type AuthUserUpdateRequest struct {
 // @Produce		json
 // @Security		ApiKeyAuth
 // @Param			request	body		AuthUserUpdateRequest	true	"User update request"
-// @Success		200		{string}	string					"Success"
-// @Failure		400		{string}	string					"Invalid Request"
-// @Failure		500		{string}	string					"Internal Server Error"
+// @Success		200		{object}	utils.SendResponse.DefaultResponse	"Success"
+// @Failure		400		{object}	utils.SendResponse.DefaultResponse	"Invalid Request"
+// @Failure		500		{object}	utils.SendResponse.DefaultResponse	"Internal Server Error"
 // @Router			/user/update [put]
 func AuthUserUpdate(c echo.Context) error {
 	// obtaining user id from jwt
