# docs/swagger.json
@@ -43,19 +43,19 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -81,7 +81,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -107,7 +107,7 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -137,19 +137,19 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -181,19 +181,19 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -225,19 +225,19 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -274,19 +274,19 @@
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "400": {
                         "description": "Invalid Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/utils.SendResponse.DefaultResponse"
                         }
                     }
                 }
@@ -424,6 +424,15 @@
                     "type": "string"
                 },
                 "user_year": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.SendResponse.DefaultResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "Default Response",
                     "type": "string"
                 }
             }
